[metadata]
name = colcon-ros-buildfarm
version = attr: colcon_ros_buildfarm.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-ros-buildfarm/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-ros-buildfarm/
author_email = Scott K Logan <logans@cottsay.net>
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extensions for colcon to utilize ros_buildfarm to build system packages in containers.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
    colcon-core
packages = find:
zip_safe = true

[options.extras_require]
test =
    flake8>=3.6.0
    flake8-blind-except
    flake8-builtins
    flake8-class-newline
    flake8-comprehensions
    flake8-deprecated
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    pep8-naming
    pylint
    pytest
    pytest-cov
    scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-ros-buildfarm
markers =
    flake8
    linter

[options.entry_points]

[flake8]
extend_ignore =
    D100
    D104
import-order-style = google
per-file-ignores =
    test/**: D101,D102,D103,D104,D105,D107
show_source = true

[coverage:run]
source = colcon_ros_buildfarm
