[metadata]
name = colcon-ros-buildfarm
version = attr: colcon_ros_buildfarm.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-ros-buildfarm/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-ros-buildfarm/
author_email = Scott K Logan <logans@cottsay.net>
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extensions for colcon to utilize ros_buildfarm to build system packages in containers.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
    colcon-core >= 0.17.1
    colcon-package-selection
    colcon-ros-distro
packages = find:
zip_safe = true

[options.extras_require]
rpm =
    createrepo_c
test =
    flake8>=3.6.0
    flake8-blind-except
    flake8-builtins
    flake8-class-newline
    flake8-comprehensions
    flake8-deprecated
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    pep8-naming
    pylint
    pytest
    pytest-cov
    scspell3k>=2.2

[tool:pytest]
filterwarnings =
    error
    # Suppress deprecation warnings in other packages
    ignore:lib2to3 package is deprecated::scspell
    ignore:SelectableGroups dict interface is deprecated::flake8
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated::pyreadline
junit_suite_name = colcon-ros-buildfarm
markers =
    flake8
    linter

[options.entry_points]
console_scripts =
    ros_buildfarm = colcon_ros_buildfarm.command:main
colcon_core.event_handler =
    local_repo = colcon_ros_buildfarm.package_import.local:LocalPackageImportExtension
colcon_ros_buildfarm.config_augmentation =
    local_repo = colcon_ros_buildfarm.package_import.local:LocalPackageImportExtension
    missing_from_repo = colcon_ros_buildfarm.package_selection.missing_from_repo:MissingFromRepoPackageSelection
colcon_ros_buildfarm.environment_variable =
    extension_blocklist = colcon_core.extension_point:EXTENSION_BLOCKLIST_ENVIRONMENT_VARIABLE
    home = colcon_ros_buildfarm.command:HOME_ENVIRONMENT_VARIABLE
    log_level = colcon_ros_buildfarm.command:LOG_LEVEL_ENVIRONMENT_VARIABLE
colcon_ros_buildfarm.package_augmentation =
    ros_workspace = colcon_ros_buildfarm.package_augmentation.ros_workspace:RosWorkspacePackageAugmentation
colcon_ros_buildfarm.package_import =
    local = colcon_ros_buildfarm.package_import.local:LocalPackageImportExtension
colcon_ros_buildfarm.local_repository =
    deb = colcon_ros_buildfarm.local_repository.deb:LocalDebRepositoryExtension
    rpm = colcon_ros_buildfarm.local_repository.rpm:LocalRpmRepositoryExtension
colcon_ros_buildfarm.package_selection =
    dependencies = colcon_package_selection.package_selection.dependencies:DependenciesPackageSelection
    missing_from_repo = colcon_ros_buildfarm.package_selection.missing_from_repo:MissingFromRepoPackageSelection
    select_skip = colcon_package_selection.package_selection.select_skip:SelectSkipPackageSelectionExtension
    start_end = colcon_package_selection.package_selection.start_end:StartEndPackageSelection
colcon_ros_buildfarm.task.release =
    ros_distro.binary = colcon_ros_buildfarm.task.release.ros_distro.binary:BuildfarmReleaseBinaryBuildTask
    ros_distro.source = colcon_ros_buildfarm.task.release.ros_distro.source:BuildfarmReleaseSourceBuildTask
colcon_ros_buildfarm.verb =
    release = colcon_ros_buildfarm.verb.release:RosBuildfarmReleaseVerb

[flake8]
extend_ignore =
    D100
    D104
import-order-style = google
per-file-ignores =
    test/**: D101,D102,D103,D104,D105,D107
show_source = true

[coverage:run]
source = colcon_ros_buildfarm
